@@ -1,5 +1,6 @@
 0.11.103
 	+ Make default and max leasing time mandatory fields
+	+ Add field help to model
 0.11.102
 	+ Bugfix. Logging were not working with hostnames with characters
 	different from alphanumeric plus '_'
